[package]
name = "npm-package"
description = "A simple client for fetching metadata from the npm package"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
